# Memoreei

./: .coverage  .env.example  .gitignore  .mcp.json  :memory:  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO.md  Dockerfile  ENTRY.md  PLAN.md  PROGRESS.md  README.md  TASK.md  TODO.md  docker-compose.yml  pyproject.toml  run_tasks.sh  tasks-v021.json  tasks.json
.github/workflows/: ci.yml  release.yml
data/samples/: whatsapp_donut_heist.txt  whatsapp_pizza_wars.txt  whatsapp_printer_conspiracy.txt
docs/: architecture.md  connectors.md  deployment.md
examples/: basic_search.py  discord_bot.py
logs-v021/: changelog-v021.done  ci-coverage.done  cli-no-subcommand.done  commit-baseline.done  commit-baseline.running  done-commit.done  done-commit.running  final-push.done  fts5-sanitizer-tests.done  readme-badges.done  setup-cli-tests.done  setup-configured-marker.done  setup-fresh-env.done  setup-reset-flag.done  sync-progress.done  version-bump.done
scripts/: demo_setup.sh  discord_post.sh  refresh.sh  seed_data.py  seed_discord.py  test_discord_sync.py  test_historical_search.py  test_live_message.py  test_mcp_e2e.py  test_negative_search.py  watch_and_sync.py
src/memoreei/: cli.py  config.py  server.py  sync_manager.py
src/memoreei/connectors/: __init__.py  base.py  discord_connector.py  discord_package_connector.py  email_connector.py  generic_connector.py  imessage_connector.py  instagram_connector.py  mastodon_connector.py  matrix_connector.py  messenger_connector.py  signal_connector.py  slack_connector.py  sms_connector.py  telegram_connector.py  whatsapp.py
src/memoreei/search/: embeddings.py  hybrid.py
src/memoreei/storage/: database.py  models.py
src/memoreei/tools/: memory_tools.py
tests/: conftest.py  test_config.py  test_connectors.py  test_discord.py  test_discord_package.py  test_fts5_sanitizer.py  test_generic_import.py  test_historical_search.py  test_imessage.py  test_instagram.py  test_mcp_e2e.py  test_messenger.py  test_negative_search.py  test_search.py  test_setup_cli.py  test_setup_fresh.py  test_signal.py  test_sms.py  test_storage.py  test_whatsapp_parser.py
usecases/: apps.md
usecases/dossier/: app.py  caddy.conf  dossier.service
usecases/dossier/templates/: index.html
usecases/memorybot/: bot.py
usecases/moviering/: app.py  caddy.conf  moviering.service
usecases/moviering/templates/: index.html
