[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memoreei"
version = "0.2.0"
description = "Personal memory MCP server — search your WhatsApp, Discord, and notes with hybrid AI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Caleb Christiansen" }]
keywords = ["mcp", "memory", "search", "personal", "ai", "vector", "hybrid-search"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database :: Database Engines/Servers",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastembed>=0.3.0",
    "openai>=1.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "python-ulid>=2.0.0",
    "typer>=0.9.0",
    "questionary>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/CalebChristiansen/Memoreei"
Repository = "https://github.com/CalebChristiansen/Memoreei"
Documentation = "https://github.com/CalebChristiansen/Memoreei#readme"
Issues = "https://github.com/CalebChristiansen/Memoreei/issues"

[project.optional-dependencies]
signal = ["pysqlcipher3>=1.0.0"]
discord-live = ["discord.py>=2.3.0", "aiohttp>=3.9.0"]
all = ["pysqlcipher3>=1.0.0", "discord.py>=2.3.0", "aiohttp>=3.9.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
memoreei = "memoreei.cli:app"
memoreei-server = "memoreei.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memoreei"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
